# General-Purpose-Bot

./: .env  .gitignore  LICENSE  Pipfile  README.md  aerich.ini  main.py  models.py  pyproject.toml  requirements.txt  test.py  tortoise_config.py
cogs/: compile.py  database.db  errors.py  events.py  fun.py  help.py  misc.py  moderation.py  music.py  onMemberJoin.py  overrides.py  ping.py  prefixes.py  remainders.py  reputation.py  roles.py  tatsu_integration.py  tickets.py  utils.py
db/: database.db  database.db-shm  database.db-wal  database.db.bak  db_overrides.py  db_prefix.py  db_token.py  db_welcome.py
migrations/app/: 1_20210618121718_None.sql  1_20210625204817_None.sql  2_20210618130836_update.sql  2_20210704140324_update.sql  3_20210618132249_update.sql  4_20210618132707_update.sql  5_20210618154348_update.sql  6_20210618162002_update.sql  7_20210618190955_update.sql
migrations/main/: 0_20210729140718_init.sql
modules/: imports.py  permissions.py
zorander/: __init__.py  __main__.py  bot.py
zorander/cogs/: errors.py  giveaway.py  help.py  logging.py  misc.py  mod.py  overrides.py  rtfm.py  snipe.py  utils.py  warnings.py
zorander/core/: __init__.py  bot.py  models.py  tortoise_config.py
zorander/utils/: activity.py  cogload.py  cogreload.py  fuzzy.py  permissions.py  rtfm.py  time.py  utilities.py
